31 MAY 2022
Added settings tab with ability to update the observer location
Added magnetic north to compass and ability to urn on/off in settings
FDC gets a count of FO's
updated package.JSON
renamed server side index.js to server.js

28 MAY 2022
Enter key in input boxes of fire commands will submit fire mission
Enter key in input box box for game code will join mission
Change padGrid() to return null if bad grid, and changed sendFireMission() and fireForEffect() to error check if grid is null and not send fire mission to server

25 MAY 2022
Add loading splash screen, with instructions and progress bar (add loadscreen AFRAM component)
  moved setCamView(cam) to observer.js file (used by the splash screen)
  Compass set to visible when first loaded (to load and render on first pass) then hide before splash screen off
GPS display is HTML overlay instead of 3D object. Div created by the AFRAME component.

23 MAY 2022
Added a light as part of the compass rig.
a-entity light="type: spot; color: #FFF; intensity: 0.5; target: #compassface; distance: 0.7; angle: 50; decay: 0.02;" position="0.01 0.5 0.05"
Change alphaTest on crosshair from 0.5 to 0.2 for better render of reticle

22 MAY 2022
Added compass as a 3d model and working dial. 
Removed text azimuth from binocular view. 
Compass dial has a sine error that osolates +/- 1 degree
(C key toggles compass on/off. Spce bar is zoom- bring up bino if compass off, zoom compass dial if compass on.)